--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ svg {
   height: 500px;
 }
 
-@media (max-width: 600) {
+@media (max-width: 950px) {
   svg {
     width: 100%;
     height: 400px;;
