--- a/src/App.css
+++ b/src/App.css
@@ -202,3 +202,48 @@ button:hover {
   flex-wrap: wrap;
 
 }
+
+
+#instructions,
+#hypercube-options {
+  border-collapse: collapse;
+  margin: 10px;
+  padding: 0;
+}
+
+#instructions * {
+  color: white;
+}
+
+#instructions {
+  float: left;
+  align-self: center;
+}
+
+#instructions td {
+  margin: 0;
+  padding: 6px 3px;
+}
+
+#instructions td:first-child {
+  text-align: right;
+  border-right: 1px solid #5f76d4;
+  padding: 0 10px;
+}
+
+#instructions .key {
+  background-color: #222;
+  border: 1px solid #444;
+  padding: 0 2px;
+  font-style: normal;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -khtml-border-radius: 2px;
+  border-radius: 2px;
+  color: #5f76d4;
+}
+
+.instructionWrapper {
+  display: flex;
+  flex-direction: column;
+}
