--- a/src/App.css
+++ b/src/App.css
@@ -174,10 +174,9 @@ button:hover {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-
 }
 
-.rangesWrapper p {
+.rangesWrapper p, .rangeText {
   font-size: 12px;
   line-height: 100%;
   margin: 0;
