--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,35 @@ body {
   }
 }
 
+.block {
+  font-size: 40px;
+  color: white;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 30px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  border-top: 2px solid white;
+  margin-bottom: 0;
+}
+
+.modificator {
+  display: flex;
+  column-gap: 10px;
+  height: 40px;
+}
+
+.modificator p {
+  color: #2de9ff;
+}
+
+.modificatorsWrapper {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
